--- a/pages/Apple_Pie.html
+++ b/pages/Apple_Pie.html
@@ -60,21 +60,18 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-          >
-            <i class="bx bxl-facebook"></i>
-          </a>
+            ><i class="bx bxl-facebook"></i
+          ></a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-          >
-            <i class="bx bxl-linkedin"></i>
-          </a>
+            ><i class="bx bxl-linkedin"></i
+          ></a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-          >
-            <i class="bx bxl-instagram"></i>
-          </a>
+            ><i class="bx bxl-instagram"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -109,7 +106,7 @@
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">300 kcal</td>
+                <td style="text-align: right">320 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
@@ -117,25 +114,26 @@
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">2 g</td>
+                <td style="text-align: right">3 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">44 g</td>
+                <td style="text-align: right">45 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">35 mg</td>
+                <td style="text-align: right">20 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            Apple Pie is a classic dessert, perfect for any occasion. The flaky,
-            buttery crust combined with the sweet, spiced apple filling makes
-            for an irresistible treat. Whether served warm with ice cream or
-            enjoyed on its own, Apple Pie never goes out of style.
+            Apple Pie is a classic dessert featuring a flaky, buttery crust
+            filled with sweet and tender spiced apples. Perfectly balanced with
+            cinnamon and sugar, this pie is a comforting treat for any occasion.
+            Serve it warm with a scoop of vanilla ice cream for the ultimate
+            indulgence!
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -143,11 +141,15 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 4-5 medium
+                ><input type="checkbox" class="customCheckbox" /> 6 medium
                 apples, peeled and sliced</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup
+                ><input type="checkbox" class="customCheckbox" /> 1/2 cup
+                granulated sugar</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1/4 cup brown
                 sugar</label
               ><br />
               <label
@@ -155,114 +157,114 @@
                 cinnamon</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp ground
+                ><input type="checkbox" class="customCheckbox" /> 1/4 tsp ground
                 nutmeg</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp
-                flour</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tbsp lemon
                 juice</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/4 tsp
-                salt</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp
+                unsalted butter</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 package pie
                 crust (or homemade)</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 egg, beaten
+                (for egg wash)</label
               ><br />
             </form>
           </div>
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!-- start -->
+              <!--start-->
               <div class="recipe">
-                <a href="Chicken_Skewers.html">
+                <a href="Chocolate_Cake.html">
                   <img
-                    src="../images/food_samples/Chicken_Skewers.webp"
-                    alt="Chicken Skewers"
+                    src="../images/food_samples/Chocolate_Cake.webp"
+                    alt="Chocolate Cake"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chicken Skewers</span>
+                    <span class="title">Chocolate Cake</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Olive Oil</span>
-                        <span class="mainIngredient">Spices</span>
+                        <span class="mainIngredient">Cocoa Powder</span>
+                        <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Eggs</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- next recipe -->
+              <!--next recipe-->
               <div class="recipe">
-                <a href="Spaghetti_Bolognese.html">
+                <a href="Cheesecake.html">
                   <img
-                    src="../images/food_samples/Spaghetti_Bolognese.webp"
-                    alt="Spaghetti Bolognese"
+                    src="../images/food_samples/Cheesecake.webp"
+                    alt="Cheesecake"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Spaghetti Bolognese</span>
+                    <span class="title">Cheesecake</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Pasta</span>
-                        <span class="mainIngredient">Tomatoes</span>
-                        <span class="mainIngredient">Ground Beef</span>
+                        <span class="mainIngredient">Cream Cheese</span>
+                        <span class="mainIngredient">Graham Crackers</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- next recipe -->
+              <!--next recipe-->
               <div class="recipe">
-                <a href="Grilled_Chicken.html">
+                <a href="Peach_Crumble.html">
                   <img
-                    src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-                    alt="Grilled Chicken"
+                    src="../images/food_samples/Peach_Crumble.webp"
+                    alt="Peach Crumble"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Grilled Chicken</span>
+                    <span class="title">Peach Crumble</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Herbs</span>
-                        <span class="mainIngredient">Garlic</span>
+                        <span class="mainIngredient">Peaches</span>
+                        <span class="mainIngredient">Oats</span>
+                        <span class="mainIngredient">Sugar</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- next recipe -->
+              <!--next recipe-->
               <div class="recipe">
-                <a href="Beef_Stir.html">
+                <a href="Banana_Bread.html">
                   <img
-                    src="../images/food_samples/Beef_Stir_Fry.webp"
-                    alt="Beef Stir Fry"
+                    src="../images/food_samples/Banana_Bread.webp"
+                    alt="Banana Bread"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Beef Stir Fry</span>
+                    <span class="title">Banana Bread</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Beef</span>
-                        <span class="mainIngredient">Vegetables</span>
-                        <span class="mainIngredient">Soy Sauce</span>
+                        <span class="mainIngredient">Bananas</span>
+                        <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Sugar</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
+              <!--next recipe-->
             </div>
           </div>
         </section>
@@ -270,45 +272,42 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Apple Filling</dt>
+              <dt>1. Prepare the Filling</dt>
               <dd>
-                In a large mixing bowl, combine the sliced apples, sugar,
-                cinnamon, nutmeg, flour, lemon juice, and salt. Toss to coat the
-                apples evenly.
+                In a large bowl, combine the sliced apples, granulated sugar,
+                brown sugar, cinnamon, nutmeg, and lemon juice. Toss until the
+                apples are evenly coated. Set aside to let the flavors meld.
               </dd>
 
-              <dt>2. Prepare the Pie Crust</dt>
+              <dt>2. Prepare the Crust</dt>
               <dd>
-                Roll out the pie crust on a floured surface. Carefully place the
-                first crust into a pie dish, pressing it gently to fit.
+                Roll out one pie crust and place it into a 9-inch pie dish. Trim
+                the edges, leaving a 1-inch overhang. Fill the crust with the
+                prepared apple mixture. Dot the filling with small pieces of
+                butter.
               </dd>
 
-              <dt>3. Fill the Pie</dt>
+              <dt>3. Add the Top Crust</dt>
               <dd>
-                Pour the apple filling into the prepared pie crust, spreading
-                the apples evenly. Place small pats of butter on top of the
-                apples.
+                Roll out the second pie crust and place it over the apples. Trim
+                and crimp the edges to seal. Cut a few small slits in the top
+                crust to allow steam to escape. Brush the top crust with beaten
+                egg for a golden finish.
               </dd>
 
-              <dt>4. Add the Top Crust</dt>
+              <dt>4. Bake the Pie</dt>
               <dd>
-                Place the second crust on top of the pie, trimming any excess
-                dough. Pinch the edges of the crust together to seal the pie.
+                Preheat the oven to 375°F (190°C). Place the pie on the middle
+                rack and bake for 50-60 minutes, or until the crust is golden
+                brown and the filling is bubbling. If the edges brown too
+                quickly, cover them with foil.
               </dd>
 
-              <dt>5. Bake the Pie</dt>
+              <dt>5. Cool and Serve</dt>
               <dd>
-                Preheat the oven to 375°F (190°C). Bake the pie for 45-50
-                minutes, or until the crust is golden brown and the apples are
-                tender. You may need to cover the edges with aluminum foil to
-                prevent over-browning.
-              </dd>
-
-              <dt>6. Cool and Serve</dt>
-              <dd>
-                Allow the pie to cool for at least 2 hours before serving. Serve
-                with a scoop of vanilla ice cream or a dollop of whipped cream,
-                if desired.
+                Remove the pie from the oven and let it cool for at least 2
+                hours before slicing. Serve warm or at room temperature with a
+                scoop of vanilla ice cream or a dollop of whipped cream.
               </dd>
             </dl>
           </div>
@@ -322,7 +321,7 @@
     </main>
     <footer>
       <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI</span>
+      <span>&copy;2025 | MOHAMMED ABDI </span>
     </footer>
   </body>
 </html>
