--- a/pages/Spaghetti_Bolognese.html
+++ b/pages/Spaghetti_Bolognese.html
@@ -60,21 +60,18 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-          >
-            <i class="bx bxl-facebook"></i>
-          </a>
+            ><i class="bx bxl-facebook"></i
+          ></a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-          >
-            <i class="bx bxl-linkedin"></i>
-          </a>
+            ><i class="bx bxl-linkedin"></i
+          ></a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-          >
-            <i class="bx bxl-instagram"></i>
-          </a>
+            ><i class="bx bxl-instagram"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -87,17 +84,17 @@
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>20 Minutes</span>
+                  <span>PREP TIME</span><span>15 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>45 Minutes</span>
+                  <span>COOK TIME</span><span>30 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Pasta</span>
+                <i class="fa-solid fa-utensils"></i><span>Meat</span>
               </div>
             </div>
           </div>
@@ -112,11 +109,11 @@
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">350 kcal</td>
+                <td style="text-align: right">450 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">12 g</td>
+                <td style="text-align: right">18 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
@@ -124,20 +121,22 @@
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">40 g</td>
+                <td style="text-align: right">45 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">60 mg</td>
+                <td style="text-align: right">70 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            Spaghetti Bolognese is a classic Italian dish that combines rich,
-            flavorful meat sauce with perfectly cooked pasta. This hearty meal
-            is perfect for family dinners and is sure to be loved by everyone!
+            Spaghetti Bolognese is a classic Italian dish featuring al dente
+            spaghetti topped with a rich and savory meat sauce. The sauce is
+            made with ground beef, tomatoes, onions, garlic, and herbs, creating
+            a hearty and flavorful meal. Perfect for family dinners or special
+            occasions, this dish is a crowd-pleaser!
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -145,116 +144,51 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 400 g ground
+                ><input type="checkbox" class="customCheckbox" /> 500g ground
                 beef</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 400g
+                spaghetti</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 onion,
                 finely chopped</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 garlic
-                cloves, minced</label
+                ><input type="checkbox" class="customCheckbox" /> 2 cloves
+                garlic, minced</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 can (400 g)
-                crushed tomatoes</label
+                ><input type="checkbox" class="customCheckbox" /> 400g canned
+                tomatoes</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 2 tbsp tomato
                 paste</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp dried
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp dried
                 oregano</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp
-                sugar</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 200 g
-                spaghetti</label
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp dried
+                basil</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> Salt and
                 pepper to taste</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> Fresh basil,
-                for garnish</label
+                ><input type="checkbox" class="customCheckbox" /> Grated
+                Parmesan cheese for serving</label
               ><br />
             </form>
           </div>
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!-- start -->
-              <div class="recipe">
-                <a href="Chicken_Skewers.html">
-                  <img
-                    src="../images/food_samples/Chicken_Skewers.webp"
-                    alt="Chicken Skewers"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Chicken Skewers</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Peppers</span>
-                        <span class="mainIngredient">Olive Oil</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
-                <a href="Grilled_Chicken.html">
-                  <img
-                    src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-                    alt="Grilled Chicken"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title"
-                      >Grilled Chicken with Herb Marinade</span
-                    >
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Olive Oil</span>
-                        <span class="mainIngredient">Herbs</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
-                <a href="Beef_Stir.html">
-                  <img
-                    src="../images/food_samples/Beef_Stir_Fry.webp"
-                    alt="Beef Stir Fry"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Beef Stir Fry</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Beef</span>
-                        <span class="mainIngredient">Vegetables</span>
-                        <span class="mainIngredient">Soy Sauce</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
+              <!--start-->
               <div class="recipe">
                 <a href="Apple_Pie.html">
                   <img
@@ -268,13 +202,77 @@
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Apples</span>
-                        <span class="mainIngredient">Sugar</span>
                         <span class="mainIngredient">Cinnamon</span>
+                        <span class="mainIngredient">Pie Crust</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
+              <!--next recipe-->
+              <div class="recipe">
+                <a href="Vegetable_Stir.html">
+                  <img
+                    src="../images/food_samples/Vegetable_Stir_Fry.webp"
+                    alt="Vegetable Stir Fry"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Vegetable Stir Fry</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Carrots</span>
+                        <span class="mainIngredient">Broccoli</span>
+                        <span class="mainIngredient">Soy Sauce</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!--next recipe-->
+              <div class="recipe">
+                <a href="French_Toast.html">
+                  <img
+                    src="../images/food_samples/French_Toast.webp"
+                    alt="French Toast"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">French Toast</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Bread</span>
+                        <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Milk</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!--next recipe-->
+              <div class="recipe">
+                <a href="Chocolate_Cake.html">
+                  <img
+                    src="../images/food_samples/Chocolate_Cake.webp"
+                    alt="Chocolate Cake"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Chocolate Cake</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Cocoa Powder</span>
+                        <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Eggs</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!--next recipe-->
             </div>
           </div>
         </section>
@@ -282,39 +280,37 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Sauce</dt>
+              <dt>1. Cook the Spaghetti</dt>
               <dd>
-                In a large pan, heat olive oil over medium heat. Add the chopped
-                onion and garlic, and cook until softened, about 5 minutes. Add
-                the ground beef and cook until browned, breaking it apart with a
-                spoon.
+                Bring a large pot of salted water to a boil. Add the spaghetti
+                and cook according to the package instructions until al dente.
+                Drain and set aside.
               </dd>
 
-              <dt>2. Add Tomatoes and Seasonings</dt>
+              <dt>2. Prepare the Sauce</dt>
               <dd>
-                Stir in the crushed tomatoes, tomato paste, oregano, sugar,
-                salt, and pepper. Reduce the heat and let the sauce simmer for
-                about 30 minutes, stirring occasionally, until thickened.
+                In a large skillet, heat olive oil over medium heat. Add the
+                chopped onion and minced garlic, and sauté until softened and
+                fragrant, about 3-4 minutes.
               </dd>
 
-              <dt>3. Cook the Spaghetti</dt>
+              <dt>3. Cook the Beef</dt>
               <dd>
-                While the sauce simmers, cook the spaghetti according to package
-                instructions. Drain the pasta and set aside, reserving some
-                pasta water for later use.
+                Add the ground beef to the skillet and cook until browned,
+                breaking it up with a spoon as it cooks. Drain any excess fat.
               </dd>
 
-              <dt>4. Combine the Pasta and Sauce</dt>
+              <dt>4. Add Tomatoes and Seasonings</dt>
               <dd>
-                Add the cooked spaghetti to the sauce, tossing to coat the
-                pasta. If needed, add a bit of reserved pasta water to reach the
-                desired consistency.
+                Stir in the canned tomatoes, tomato paste, dried oregano, dried
+                basil, salt, and pepper. Simmer the sauce for 15-20 minutes,
+                stirring occasionally, until it thickens.
               </dd>
 
-              <dt>5. Serve</dt>
+              <dt>5. Combine and Serve</dt>
               <dd>
-                Divide the spaghetti between serving plates and garnish with
-                fresh basil. Serve with grated Parmesan cheese if desired.
+                Add the cooked spaghetti to the skillet and toss to coat it with
+                the sauce. Serve hot, garnished with grated Parmesan cheese.
               </dd>
             </dl>
           </div>
@@ -328,7 +324,7 @@
     </main>
     <footer>
       <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI</span>
+      <span>&copy;2025 | MOHAMMED ABDI </span>
     </footer>
   </body>
 </html>
